# BidCrawler

./: .gitignore  README.md  debug_bonfire_intercept.py  debug_esbd_missing_urls.py  debug_esbd_url.py  fix_esbd_urls.py  pyproject.toml
bid_crawler/: __init__.py  app.py  cli.py  config.py  db.py  matcher.py
bid_crawler/etl/: __init__.py  loader.py  pipeline.py  transformer.py
bid_crawler/export/: sheets.py
bid_crawler/sources/: __init__.py  base.py  bidnet_source.py  bonfire_source.py  dallas_bonfire_source.py  fort_worth_bonfire_source.py  opengov_source.py  sam_gov_source.py  texas_esbd_source.py
config/: criteria.yaml  settings.yaml
config/sources/: bidnet.yaml  dallas_bonfire.yaml  dallas_isd_bonfire.yaml  fort_worth_bonfire.yaml  opengov.yaml  richardson_isd_bonfire.yaml  rockwall_isd_bonfire.yaml  sam_gov.yaml  texas_esbd.yaml
sql/: schema.sql
tests/: test_sam_gov_source.py
